--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h2>OIC EDUCATION</h2>
             </div>
             <div class="nav_elements">
-                <ul>
+                <ul class="element_container">
                     <li>Home</li>
                     <li>About</li>
                     <li class="nav_link">Courses
@@ -68,6 +68,7 @@
 
             <div class="menu_bar">
                 <i class="fa-solid fa-bars"></i>
+                <div class="close">&times;</div>
             </div>
             
         </div>
@@ -285,11 +286,8 @@
         <p>&copy;All Rights Reserved,2024</p>
     </footer>
     <!-- Footer End -->
-    <div>
-        <h1>HIIIIIIIIIIIIIII
-        </h1>
-    </div>
 
+<script src="./script.js"></script>
 </body>
 
 </html>
